--- a/drivers/watchdog_cpu_ctx/Kbuild
+++ b/drivers/watchdog_cpu_ctx/Kbuild
@@ -1,5 +1,9 @@
 # add -Wall to try to catch everything we can.
 EXTRA_CFLAGS += -Wall
-EXTRA_CFLAGS += -I$(TOP)/motorola/kernel/modules/include
+EXTRA_CFLAGS += -I$(ANDROID_BUILD_TOP)/motorola/kernel/modules/include
 
 obj-m += watchdog_cpu_ctx.o
+
+KBUILD_EXTRA_SYMBOLS += $(CURDIR)/$(KBUILD_EXTMOD)/../mmi_annotate/Module.symvers
+KBUILD_EXTRA_SYMBOLS += $(CURDIR)/$(KBUILD_EXTMOD)/../mmi_info/Module.symvers
+KBUILD_EXTRA_SYMBOLS += $(KBUILD_OUTPUT)/Module.symver
