--- a/drivers/input/misc/rbs_fps_mmi/Kbuild
+++ b/drivers/input/misc/rbs_fps_mmi/Kbuild
@@ -7,6 +7,9 @@ ifneq ($(filter m y,$(CONFIG_EGIS_PANEL_NOTIFICATIONS)),)
     EXTRA_CFLAGS += -DCONFIG_PANEL_NOTIFICATIONS
 endif
 
+ifneq ($(filter m y,$(CONFIG_EGIS_PANEL_NOTIFICATIONS)),)
+    EXTRA_CFLAGS += -DET721_FOD
+endif
 rbs_fps_mmi-y += etxxx_fp.o
 
 
