--- a/drivers/power/sgm4154x_chg_mmi/Kbuild
+++ b/drivers/power/sgm4154x_chg_mmi/Kbuild
@@ -5,4 +5,4 @@ EXTRA_CFLAGS += -I$(ANDROID_BUILD_TOP)/motorola/kernel/modules/include \
 
 obj-m += sgm4154x_charger.o
 
-
+KBUILD_EXTRA_SYMBOLS += $(CURDIR)/$(KBUILD_EXTMOD)/../mmi_discrete_charger/$(GKI_OBJ_MODULE_DIR)/Module.symvers
