--- a/drivers/usb/typec/mmi_tcpc/Kbuild
+++ b/drivers/usb/typec/mmi_tcpc/Kbuild
@@ -36,8 +36,10 @@ tcpc_class-objs			+= tcpci_event.o \
 		pd_process_evt_dbg.o pd_process_evt_tcp.o pd_process_evt_com.o \
 		pd_policy_engine_src.o pd_policy_engine_snk.o pd_policy_engine_ufp.o pd_policy_engine_vcs.o \
 		pd_policy_engine_dfp.o pd_policy_engine_dr.o pd_policy_engine_drs.o pd_policy_engine_prs.o \
-		pd_policy_engine_dbg.o pd_policy_engine_com.o pd_dpm_alt_mode_dc.o
+		pd_policy_engine_dbg.o pd_policy_engine_com.o pd_dpm_alt_mode_dc.o pd_adapter.o
 endif
 
 obj-m	+= tcpc_class.o
 obj-m	+= rt_pd_manager.o
+
+KBUILD_EXTRA_SYMBOLS += $(CURDIR)/$(KBUILD_EXTMOD)/../adapter_class/$(GKI_OBJ_MODULE_DIR)/Module.symvers
