--- a/drivers/power/bq2589x_chg_mmi/Kbuild
+++ b/drivers/power/bq2589x_chg_mmi/Kbuild
@@ -5,4 +5,4 @@ EXTRA_CFLAGS += -I$(ANDROID_BUILD_TOP)/motorola/kernel/modules/include \
 
 obj-m += bq2589x_charger.o
 
-
+KBUILD_EXTRA_SYMBOLS += $(CURDIR)/$(KBUILD_EXTMOD)/../mmi_discrete_charger/$(GKI_OBJ_MODULE_DIR)/Module.symvers
