Power: discrete_charger policy create factory tcmd test node
create /sys/class/power_supply/battery/
force_chg_usb_suspend
force_chg_auto_enable
force_chg__ibatt
force_chg_iusb

Change-Id: I19fc0231ab7bf3ae6020130ea29b09576f12425b
Signed-off-by: liuyc20 <liuyc20@mt.com>
Reviewed-on: https://gerrit.mot.com/2090584
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Tested-by: Jira Key
Submit-Approved: Jira Key

--- a/drivers/power/mmi_discrete_charger/Kbuild
+++ b/drivers/power/mmi_discrete_charger/Kbuild
@@ -7,6 +7,7 @@ EXTRA_CFLAGS += -I$(ANDROID_BUILD_TOP)/motorola/kernel/modules/include \
 obj-m += mmi_discrete_charger.o
 mmi_discrete_charger-objs += mmi_discrete_charger_core.o
 mmi_discrete_charger-objs += mmi_discrete_voter.o
+mmi_discrete_charger-objs += mmi_discrete_factory_tcmd.o
 
 KBUILD_EXTRA_SYMBOLS += $(CURDIR)/$(KBUILD_EXTMOD)/../mmi_charger/$(GKI_OBJ_MODULE_DIR)/Module.symvers
 
