--- a/drivers/power/mmi_discrete_charger/Kbuild
+++ b/drivers/power/mmi_discrete_charger/Kbuild
@@ -6,6 +6,7 @@ EXTRA_CFLAGS += -I$(ANDROID_BUILD_TOP)/motorola/kernel/modules/include \
 
 obj-m += mmi_discrete_charger.o
 mmi_discrete_charger-objs += mmi_discrete_charger_core.o
+mmi_discrete_charger-objs += mmi_discrete_charger_iio.o
 mmi_discrete_charger-objs += mmi_discrete_voter.o
 mmi_discrete_charger-objs += mmi_discrete_factory_tcmd.o
 
