touchscreen_mmi: Support refresh reate notification in Rogue
1. dsi_freq_head is undefined, so add Module.symvers of display driver.
2. Use the KBUILD_OPTIONS to pass the configuration parameters to
the Kbuild filed.

Change-Id: I24d792a26cb1d3a9f8beca8089cea7116ae1a669
Reviewed-on: https://gerrit.mot.com/2097103
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jianqi Yang <yangj@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/input/touchscreen/touchscreen_mmi/Makefile
+++ b/drivers/input/touchscreen/touchscreen_mmi/Makefile
@@ -11,3 +11,4 @@ modules_install:
 
 KBUILD_EXTRA_SYMBOLS += $(M)/../../../sensors/Module.symvers
 KBUILD_EXTRA_SYMBOLS += $(M)/../../../mmi_relay/Module.symvers
+KBUILD_EXTRA_SYMBOLS += $(OUT_DIR)/../../vendor/qcom/opensource/display-drivers/msm/Module.symvers
