arm64/dts: Rhode4G: add macro camera dtsi
details:
add macro camera dtsi

Change-Id: I904d2782ca95539184e73122cdf6d8bd37de6a40
Signed-off-by: yangmf3 <yangmf3@motorola.com>
Reviewed-on: https://gerrit.mot.com/2122103
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Reviewed-by: Guobin Zhang <zhanggb@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Submit-Approved: Jira Key

--- a/khaje-camera-sensor-mot-rhode-overlay.dtsi
+++ b/khaje-camera-sensor-mot-rhode-overlay.dtsi
@@ -328,6 +328,48 @@
 		clock-rates = <24000000>;
 	};
 
+	/* macro : gc02m1 */
+	qcom,cam-sensor@2 {
+		cell-index = <2>;
+		compatible = "qcom,cam-sensor";
+		csiphy-sd-index = <1>;
+		sensor-position-roll = <90>;
+		sensor-position-pitch = <0>;
+		sensor-position-yaw = <180>;
+		eeprom-src = <&eeprom_macro>;
+		//led-flash-src = <&led_flash_main>;
+		cam_vio-supply = <&cam_ldo4>;
+		cam_vana-supply = <&cam_ldo5>;
+		cam_clk-supply = <&gcc_camss_top_gdsc>;
+		regulator-names = "cam_vio", "cam_vana", "cam_clk";
+		rgltr-cntrl-support;
+		rgltr-min-voltage = <1800000 2800000 0>;
+		rgltr-max-voltage = <1800000 2800000 0>;
+		rgltr-load-current = <120000 80000 0>;
+		gpio-no-mux = <0>;
+		pinctrl-names = "cam_default", "cam_suspend";
+		pinctrl-0 = <&cam_sensor_mclk3_active
+				&cam_sensor_rear_macro_reset_active>;
+		pinctrl-1 = <&cam_sensor_mclk3_suspend
+				&cam_sensor_rear_macro_reset_suspend>;
+		gpios = <&tlmm 28 0>,
+			<&tlmm 65 0>,
+			<&tlmm 67 0>;
+		gpio-reset = <1>;
+		gpio-custom1 = <2>;//sel low for macro,high for wide
+		gpio-req-tbl-num = <0 1 2>;
+		gpio-req-tbl-flags = <1 0 0>;
+		gpio-req-tbl-label = "CAMIF_MCLK3",
+					"CAM_RESET3",
+					"CAM_MIPI_SEL";
+		cci-master = <1>;
+		status = "ok";
+		clocks = <&gcc GCC_CAMSS_MCLK3_CLK>;
+		clock-names = "cam_clk";
+		clock-cntl-level = "turbo";
+		clock-rates = <24000000>;
+	};
+
 	/*Rear Aux*/
 	qcom,cam-sensor@3 {
 		cell-index = <3>;
