--- a/khaje-camera-sensor-mot-rhode-overlay.dtsi
+++ b/khaje-camera-sensor-mot-rhode-overlay.dtsi
@@ -328,6 +328,48 @@
 		clock-rates = <24000000>;
 	};
 
+	/*front*/
+	 qcom,cam-sensor@1 {
+		cell-index = <1>;
+		compatible = "qcom,cam-sensor";
+		csiphy-sd-index = <2>;
+		sensor-position-roll = <270>;
+		sensor-position-pitch = <0>;
+		sensor-position-yaw = <180>;
+		//eeprom-src = <&eeprom_front>;
+		cam_vio-supply = <&cam_ldo4>;
+		cam_vana-supply = <&cam_ldo5>;
+		cam_vdig-supply = <&camera_dvdd_en>;
+		cam_clk-supply = <&gcc_camss_top_gdsc>;
+		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
+			"cam_clk";
+		rgltr-cntrl-support;
+		pwm-switch;
+		rgltr-min-voltage = <1800000 2800000 1200000 0>;
+		rgltr-max-voltage = <1800000 2800000 1200000 0>;
+		rgltr-load-current = <120000 80000 1200000 0>;
+		gpio-no-mux = <0>;
+		pinctrl-names = "cam_default", "cam_suspend";
+		pinctrl-0 = <&cam_sensor_mclk2_active
+					&cam_sensor_front_reset_active>;
+		pinctrl-1 = <&cam_sensor_mclk2_suspend
+					&cam_sensor_front_reset_suspend>;
+		gpios = <&tlmm 27 0>,
+				<&tlmm 24 0>;
+		gpio-reset = <1>;
+		gpio-req-tbl-num = <0 1 >;
+		gpio-req-tbl-flags = <1 0 >;
+		gpio-req-tbl-label = "CAMIF_MCLK2",
+					"CAM_RESET2";
+		cci-master = <1>;
+		status = "ok";
+		clocks = <&gcc GCC_CAMSS_MCLK2_CLK>;
+		clock-names = "cam_clk";
+		clock-cntl-level = "turbo";
+		clock-rates = <24000000>;
+	};
+
+
 	/* macro : gc02m1 */
 	qcom,cam-sensor@2 {
 		cell-index = <2>;
@@ -336,7 +378,7 @@
 		sensor-position-roll = <90>;
 		sensor-position-pitch = <0>;
 		sensor-position-yaw = <180>;
-		eeprom-src = <&eeprom_macro>;
+		//eeprom-src = <&eeprom_macro>;
 		//led-flash-src = <&led_flash_main>;
 		cam_vio-supply = <&cam_ldo4>;
 		cam_vana-supply = <&cam_ldo5>;
