arm64/dts Rhode4G: main af bring up(2/2)
details:
Add main camera af dw9800v driver

Change-Id: Iefcb75284bb3d9b7938f439f6538d1eae273d03c
Signed-off-by: qiaopf1 <qiaopf1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2122886
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Shuo Wang <wangsh18@motorola.com>
Reviewed-by: <yangmf3@motorola.com>
Reviewed-by: <huqian4@motorola.com>
Reviewed-by: Guobin Zhang <zhanggb@motorola.com>
Reviewed-by: Zhuoran Xu <xuzr3@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/khaje-camera-sensor-mot-rhode-overlay.dtsi
+++ b/khaje-camera-sensor-mot-rhode-overlay.dtsi
@@ -275,7 +275,7 @@
 		cell-index = <0>;
 		compatible = "qcom,actuator";
 		cci-master = <0>;
-		//cam_vaf-supply = <&cam_ldo3>;
+		cam_vaf-supply = <&cam_ldo3>;
 		regulator-names = "cam_vaf";
 		rgltr-cntrl-support;
 		rgltr-min-voltage = <2800000>;
@@ -308,7 +308,7 @@
 		sensor-position-yaw = <180>;
 		//led-flash-src = <&led_flash_rear>;
 		//eeprom-src = <&eeprom_main>;
-		//actuator-src = <&actuator_rear>;
+		actuator-src = <&actuator_rear>;
 		//cam_vaf-supply = <&cam_ldo3>;
 		cam_vio-supply = <&cam_ldo4>;
 		cam_vana-supply = <&cam_ldo7>;
