--- a/khaje-camera-sensor-mot-rhode-overlay.dtsi
+++ b/khaje-camera-sensor-mot-rhode-overlay.dtsi
@@ -284,6 +284,20 @@
 		status = "ok";
 	};
 
+	eeprom_front: qcom,eeprom@1 {
+		cell-index = <1>;
+		reg = <0x1>;
+		compatible = "qcom,eeprom";
+		cam_vio-supply = <&cam_ldo4>;
+		regulator-names = "cam_vio";
+		rgltr-cntrl-support;
+		rgltr-min-voltage = <1800000>;
+		rgltr-max-voltage = <1800000>;
+		rgltr-load-current = <3000>;
+		cci-master = <1>;
+		status = "ok";
+	};
+
 	 /* main : JN1*/
 	qcom,cam-sensor@0 {
 		cell-index = <0>;
@@ -336,7 +350,7 @@
 		sensor-position-roll = <270>;
 		sensor-position-pitch = <0>;
 		sensor-position-yaw = <180>;
-		//eeprom-src = <&eeprom_front>;
+		eeprom-src = <&eeprom_front>;
 		cam_vio-supply = <&cam_ldo4>;
 		cam_vana-supply = <&cam_ldo5>;
 		cam_vdig-supply = <&camera_dvdd_en>;
