--- a/khaje-camera-sensor-mot-rhode-overlay.dtsi
+++ b/khaje-camera-sensor-mot-rhode-overlay.dtsi
@@ -354,6 +354,43 @@
 		status = "ok";
 	};
 
+	/* macro : gc02m1 */
+	eeprom_macro: qcom,eeprom@2 {
+		cell-index = <2>;
+		reg = <0x2>;
+		compatible = "qcom,eeprom";
+		cam_vio-supply = <&cam_ldo4>;
+		cam_vana-supply = <&cam_ldo5>;
+		cam_clk-supply = <&gcc_camss_top_gdsc>;
+		regulator-names = "cam_vio", "cam_vana", "cam_clk";
+		rgltr-cntrl-support;
+		rgltr-min-voltage = <1800000 2800000 0>;
+		rgltr-max-voltage = <1800000 2800000 0>;
+		rgltr-load-current = <120000 80000 0>;
+		gpio-no-mux = <0>;
+		pinctrl-names = "cam_default", "cam_suspend";
+		pinctrl-0 = <&cam_sensor_mclk3_active
+				&cam_sensor_rear_macro_reset_active>;
+		pinctrl-1 = <&cam_sensor_mclk3_suspend
+				&cam_sensor_rear_macro_reset_suspend>;
+		gpios = <&tlmm 28 0>,
+			<&tlmm 65 0>,
+			<&tlmm 67 0>;
+		gpio-reset = <1>;
+		gpio-custom1 = <2>;//sel low for macro,high for wide
+		gpio-req-tbl-num = <0 1 2>;
+		gpio-req-tbl-flags = <1 0 0>;
+		gpio-req-tbl-label = "CAMIF_MCLK3",
+					"CAM_REST3",
+					"CAM_MIPI_SEL";
+		cci-master = <1>;
+		status = "ok";
+		clocks = <&gcc GCC_CAMSS_MCLK3_CLK>;
+		clock-names = "cam_clk";
+		clock-cntl-level = "turbo";
+		clock-rates = <24000000>;
+	};
+
 	 /* main : JN1*/
 	qcom,cam-sensor@0 {
 		cell-index = <0>;
@@ -448,7 +485,7 @@
 		sensor-position-roll = <90>;
 		sensor-position-pitch = <0>;
 		sensor-position-yaw = <180>;
-		//eeprom-src = <&eeprom_macro>;
+		eeprom-src = <&eeprom_macro>;
 		//led-flash-src = <&led_flash_main>;
 		cam_vio-supply = <&cam_ldo4>;
 		cam_vana-supply = <&cam_ldo5>;
