fix input touch gpio
fix input touch gpio
tmp fix in camera

Change-Id: I424ffa35ae15ecd0dc18254fcb917539bf0a87ce
Signed-off-by: huaqin71 <huaqin71@motorola.com>
Reviewed-on: https://gerrit.mot.com/2126364
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Wei Deng <dengwei1@motorola.com>
Reviewed-by: Xiangpo Zhao <zhaoxp3@motorola.com>
Submit-Approved: Jira Key

--- a/khaje-camera-sensor-mot-rhode-overlay.dtsi
+++ b/khaje-camera-sensor-mot-rhode-overlay.dtsi
@@ -258,7 +258,7 @@
 		regulator-max-microvolt = <1200000>;
 		regulator-enable-ramp-delay = <233>;
 		enable-active-high;
-		gpio = <&tlmm 2 0>;
+		//gpio = <&tlmm 2 0>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&camera_dvdd_en_active>;
 		vin-supply = <&S6A>;
