--- a/khaje-camera-sensor-mot-rhode-overlay.dtsi
+++ b/khaje-camera-sensor-mot-rhode-overlay.dtsi
@@ -218,52 +218,9 @@
 			output-low;
 		};
 	};
-
-	camera_dvdd_en_active: camera_dvdd_en_active {
-		/* VDIG */
-		mux {
-			pins = "gpio2";
-			function = "gpio";
-		};
-
-		config {
-			pins = "gpio2";
-			bias-disable; /* No PULL */
-			drive-strength = <2>; /* 2 MA */
-		};
-	};
-
-	camera_dvdd_en_suspend: camera_dvdd_en_suspend {
-		/* VDIG */
-		mux {
-			pins = "gpio2";
-			function = "gpio";
-		};
-
-		config {
-			pins = "gpio2";
-			bias-pull-down; /* PULL DOWN */
-			drive-strength = <2>; /* 2 MA */
-			output-low;
-		};
-	};
 };
 
 &soc {
-	camera_dvdd_en: gpio-regulator@0 {
-		compatible = "regulator-fixed";
-		reg = <0x00 0x00>;
-		regulator-name = "camera_dvdd_en";
-		regulator-min-microvolt = <1200000>;
-		regulator-max-microvolt = <1200000>;
-		regulator-enable-ramp-delay = <233>;
-		enable-active-high;
-		//gpio = <&tlmm 2 0>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&camera_dvdd_en_active>;
-		vin-supply = <&S6A>;
-	};
-
 	qcom,cam-res-mgr {
 		compatible = "qcom,cam-res-mgr";
 		status = "ok";
@@ -303,8 +260,8 @@
 		compatible = "qcom,eeprom";
 		csiphy-sd-index = <1>;
 		cam_vio-supply = <&cam_ldo4>;
-		cam_vana-supply = <&cam_ldo5>;
-		cam_vdig-supply = <&camera_dvdd_en>;
+		cam_vana-supply = <&cam_pmic2_ldo3>;
+		cam_vdig-supply = <&cam_pmic2_ldo1>;
 		cam_clk-supply = <&gcc_camss_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
 			"cam_clk";
@@ -360,7 +317,7 @@
 		reg = <0x2>;
 		compatible = "qcom,eeprom";
 		cam_vio-supply = <&cam_ldo4>;
-		cam_vana-supply = <&cam_ldo5>;
+		cam_vana-supply = <&cam_pmic2_ldo3>;
 		cam_clk-supply = <&gcc_camss_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_clk";
 		rgltr-cntrl-support;
@@ -446,7 +403,7 @@
 		eeprom-src = <&eeprom_front>;
 		cam_vio-supply = <&cam_ldo4>;
 		cam_vana-supply = <&cam_ldo5>;
-		cam_vdig-supply = <&camera_dvdd_en>;
+		cam_vdig-supply = <&cam_pmic2_ldo2>;
 		cam_clk-supply = <&gcc_camss_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
 			"cam_clk";
@@ -488,7 +445,7 @@
 		eeprom-src = <&eeprom_macro>;
 		//led-flash-src = <&led_flash_main>;
 		cam_vio-supply = <&cam_ldo4>;
-		cam_vana-supply = <&cam_ldo5>;
+		cam_vana-supply = <&cam_pmic2_ldo3>;
 		cam_clk-supply = <&gcc_camss_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_clk";
 		rgltr-cntrl-support;
@@ -530,8 +487,8 @@
 		//led-flash-src = <&led_flash_rear_aux>;
 		eeprom-src = <&eeprom_wide>;
 		cam_vio-supply = <&cam_ldo4>;
-		cam_vana-supply = <&cam_ldo5>;
-		cam_vdig-supply = <&camera_dvdd_en>;
+		cam_vana-supply = <&cam_pmic2_ldo3>;
+		cam_vdig-supply = <&cam_pmic2_ldo1>;
 		cam_clk-supply = <&gcc_camss_top_gdsc>;
 		regulator-names = "cam_vio", "cam_vana", "cam_vdig",
 			"cam_clk";
