--- a/drivers/input/misc/chipone_fps_mmi/Kbuild
+++ b/drivers/input/misc/chipone_fps_mmi/Kbuild
@@ -2,4 +2,11 @@
 EXTRA_CFLAGS += -Wall
 EXTRA_CFLAGS += -I$(ANDROID_BUILD_TOP)/motorola/kernel/modules/include
 
+prod_list := hawao
+find_target := $(foreach find, $(prod_list), $(findstring $(find), $(TARGET_PRODUCT)))
+ifneq ($(find_target), )
+$(warning jianl: define SUPPORT_POWER_GPIO)
+EXTRA_CFLAGS += -DSUPPORT_POWER_GPIO
+endif
+
 obj-m += fpsensor_spi_tee.o
